tests/cn/mergesort.c.test
return code: 1
In file included from ./mergesort.test.c:248:
./mergesort.gen.h:55:23: warning: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C23, conflicting with a previous declaration [-Wdeprecated-non-prototype]
   55 | struct a_1849_record* bennet_split();
      |                       ^
/Users/guso/.opam/default/lib/cn/runtime/include/bennet/internals/rand.h:78:6: note: conflicting prototype is here
   78 | void bennet_split(size_t n, size_t* arr[], size_t len);
      |      ^
In file included from ./mergesort.test.c:248:
./mergesort.gen.h:55:23: error: conflicting types for 'bennet_split'
   55 | struct a_1849_record* bennet_split();
      |                       ^
/Users/guso/.opam/default/lib/cn/runtime/include/bennet/internals/rand.h:78:6: note: previous declaration is here
   78 | void bennet_split(size_t n, size_t* arr[], size_t len);
      |      ^
In file included from ./mergesort.test.c:248:
./mergesort.gen.h:193:23: error: conflicting types for 'bennet_split'
  193 | struct a_1849_record* bennet_split()
      |                       ^
/Users/guso/.opam/default/lib/cn/runtime/include/bennet/internals/rand.h:78:6: note: previous declaration is here
   78 | void bennet_split(size_t n, size_t* arr[], size_t len);
      |      ^
In file included from ./mergesort.test.c:248:
./mergesort.gen.h:265:50: error: too few arguments to function call, expected 3, have 0
  265 |   struct a_1849_record* cn_result = bennet_split();
      |                                     ~~~~~~~~~~~~ ^
/Users/guso/.opam/default/lib/cn/runtime/include/bennet/internals/rand.h:78:6: note: 'bennet_split' declared here
   78 | void bennet_split(size_t n, size_t* arr[], size_t len);
      |      ^            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 warning and 3 errors generated.
